DAT-18: Create an executable bundle * Fixed defect where relative path sources weren't parsed properly. * Update datastax-loader script help to clarify search order,   introduce application.conf, and explain setting shortcuts. * When searching for a usable java, verify that it is Java 8 or later. * Include a simple application.conf in the bundle.